...
                                                    <font key="NSFont" size="17" name="HelveticaNeue"/>
                                                </attributes>
                                            </fragment>
                                        </attributedString>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1qH-Di-vVQ">
                                        <rect key="frame" x="238" y="0.0" width="84" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9zo-fo-eIp">
                                        <rect key="frame" x="238" y="50" width="84" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCv-Le-QST">
                                        <rect key="frame" x="253" y="100" width="54" height="30"/>
                                        <state key="normal" title="SIGN IN"/>
                                        <connections>
                                            <action selector="signInButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x2d-Ze-g6D"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
